examples/test/testpolicy13522.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13522
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key20: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value33
          key48: value5
      podSelector:
        matchLabels:
          key22: value18
          key3: value24
          key13: value10
